# AtHand

./: .gitignore  AGENTS.md  README.md  build.spec  index.html  package-lock.json  package.json  requirements.txt  run.py
configs/: default.json
src/: main.js  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hotkey.rs  llm.rs  main.rs
src/core/: config.py  hotkey.py  llm.py  tray.py
src/ui/: answer_panel.py  markdown_renderer.py  settings_dialog.py  spotlight.py  styles.py
